compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/funKeyword.kt
// FIR_IDENTICAL
fun<!SYNTAX, SYNTAX!><!>